2002-03-15  Manish Singh  <yosh@gimp.org>

	* Makefile
	* install-check.c: rewrote install-check in C. Much faster now.
	I also did a check for .h[^.]*$ to make it only cmp on header
	files. Not entirely sure that is completely valid (are there any
	installed headers that don't end in .h?)

2002-03-15  Dave Neary  <bolsh@gimp.org>

	* moduleinfo.py (head): Added sawfish and it's
	  dependencies. Watch out for librep trying to install
	  rep.m4 in /usr/shar/aclocal.

2002-03-14  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add glade2c.

	* bootstrap.py (bootstraps): update versions to bootstrap with.

	* jhbuild.py (addpath): set ACLOCAL_AMFLAGS as well.  This should
	make things work a bit better with automake-1.6.

2002-03-06  Havoc Pennington  <hp@redhat.com>

	* moduleinfo.py (gnome1): remove libzvt dep from gnome1 gnome-core

2002-03-06  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add a meta-gnome-devel-tools meta module.

	* module.py (BuildScript._*): force a chdir before configure,
	make, etc.
	(BuildScript.__init__): create a CVSRoot object to handle
	checkouts.
	(BuildScript._cvscheckout): simplify to use the CVSRoot object.
	(BuildScript._configure): use the CVSRoot to find the checkoutdir
	(BuildScript._makeclean): same here.
	(BuildScript._make): same here.
	(BuildScript._makeinstall): same here.
	(Module): remove the cvs args stuff.

2002-03-05  James Henstridge  <james@daa.com.au>

	* module.py (BuildScript.build): if we are forcing a configure,
	also force a checkout, rather than update.

	* moduleinfo.py (head): s/Task/MetaModule/, and rename meta
	modules to begin with meta-, so they match the GARNOME naming.

	* module.py (MetaModule): rename from Task.

2002-03-02  Havoc Pennington  <hp@pobox.com>

	* moduleinfo.py: add bug-buddy to 'desktop' task

2002-02-20  James Henstridge  <james@daa.com.au>

	* module.py (BuildScript.login): make python 1.5 compatible.  And