@@ -138,8 +138,8 @@ head.add(MetaModule(name='meta-gnome-python',
 # gnome 1.x support
 gnome1 = ModuleSet()
 gnome1.add(Module(name='intltool'))
-gnome1.add(Module(name='audiofile'))
-gnome1.add(Module(name='esound', dependencies=['audiofile']))
+gnome1.add(Module(name='gnome-common'))
+gnome1.add(Module(name='esound'))
 gnome1.add(Module(name='gtk-doc'))
 gnome1.add(Module(name='glib', revision='glib-1-2',
                   dependencies=['gtk-doc']))
@@ -152,19 +152,20 @@ gnome1.add(Module(name='gnome-xml', checkoutdir='libxml',
 gnome1.add(Module(name='imlib',
                   dependencies=['gtk+']))
 gnome1.add(Module(name='gnome-libs', revision='gnome-libs-1-0',
-                  dependencies=['ORBit', 'gtk+', 'esound']))
+                  dependencies=['ORBit', 'imlib', 'esound']))
 gnome1.add(Module(name='libglade', revision='libglade-1-0',
                   dependencies=['gtk+', 'gnome-libs', 'gnome-xml']))
 gnome1.add(Module(name='gdk-pixbuf',
                   dependencies=['gtk+', 'gnome-libs']))
 gnome1.add(Module(name='oaf',
-                  dependencies=['ORBit', 'gnome-xml']))
+                  dependencies=['intltool', 'ORBit', 'gnome-xml']))
 gnome1.add(Module(name='gconf', revision='gconf-1-0',
                   dependencies=['ORBit', 'gnome-xml', 'gtk+']))
-gnome1.add(Module(name='gnome-print',
+gnome1.add(Module(name='gnome-print', revision='gnome-1-4-branch',
                   dependencies=['gnome-libs', 'gnome-xml', 'gdk-pixbuf']))
-gnome1.add(Module(name='gnome-vfs', revision='gnome-vfs-1-0',
-                  dependencies=['oaf', 'ORBit', 'gconf', 'gnome-xml']))
+gnome1.add(Module(name='gnome-mime-data', dependencies=['gnome-common']))
+gnome1.add(Module(name='gnome-vfs', revision='gnome-vfs-1',
+                  dependencies=['oaf', 'ORBit', 'gconf', 'gnome-xml', 'gnome-mime-data']))
 gnome1.add(Module(name='bonobo',
                   dependencies=['gnome-libs', 'oaf', 'gnome-print']))
 gnome1.add(Module(name='control-center', revision='control-center-1-0',
@@ -175,13 +176,13 @@ gnome1.add(Module(name='gnome-core', revision='gnome-core-1-0',
 gnome1.add(Module(name='libgtop', revision='LIBGTOP_STABLE_1_0',
                   dependencies=['glib']))
 gnome1.add(Module(name='gnome-http', checkoutdir='libghttp'))
-gnome1.add(Module(name='gnome-applets', revision='gnome-applets-1-0',
-                  dependencies=['gnome-core', 'libgtop', 'libghttp']))
+gnome1.add(Module(name='gnome-applets', revision='gnome-applets-1-4',
+                  dependencies=['gnome-core', 'libgtop', 'gnome-http']))
 gnome1.add(Module(name='medusa',
                   dependencies=['gnome-vfs', 'gtk+']))
-gnome1.add(Module(name='librsvg',
+gnome1.add(Module(name='librsvg', revision='librsvg-1-0',
                   dependencies=['gtk+', 'gnome-xml', 'gdk-pixbuf']))
-gnome1.add(Module(name='eel',
+gnome1.add(Module(name='eel', revision='eel-1-0',
                   dependencies=['gnome-libs', 'librsvg', 'gnome-vfs']))
-gnome1.add(Module(name='nautilus',
+gnome1.add(Module(name='nautilus', revision='nautilus-gnome-1',
                   dependencies=['gnome-libs', 'eel', 'bonobo', 'control-center']))
