@@ -1,3 +1,8 @@
+2002-03-18  James Henstridge  <james@daa.com.au>
+
+	* moduleinfo.py: apply Greg Schafer's patch for the gnome1
+	build rules.
+
 2002-03-15  Manish Singh  <yosh@gimp.org>
 
 	* Makefile
